2020-09-08         Andrew J. Schorr     <ajschorr@fedoraproject.org>

	* reclen.c (reclen_get_record): Remove unused variable fixed_buffer.

2020-09-07         Arnold D. Robbins     <arnold@skeeve.com>

	Per Andrew Schorr, no reaason to have per file buffers.

	* reclen.c (fixed_buffer_t): Move buffer management outside
	of the structure.
	(buf, buflen, alloclen, reclen_cookie): New static globals.
	All code adjusted.

2020-08-23         Arnold D. Robbins     <arnold@skeeve.com>

	Avoid realloc if RECLEN shrinks and grows but stays within
	what was allocated previously. Thanks to Andrew Schorr for
	the suggestion.

	* reclen.c (fixed_buffer_t): Add alloclen, amount allocated.
	(reclen_get_record): Compare against alloclen and update it
	if necessary.

2020-08-08         Arnold D. Robbins     <arnold@skeeve.com>

	* First version.